--- a/public/store.html
+++ b/public/store.html
@@ -4,7 +4,7 @@
     <meta charset="uf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
-    <title>Carr Bookings</title>
+    <title>Store</title>
   </head>
   <body>
     <div class="header">
