second password to match

--- a/public/registration.html
+++ b/public/registration.html
@@ -107,6 +107,8 @@
 
           <label for="password"> Password:</label>
           <input type="password" id="password" name="psw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
+          <label for="password"> Re-enter password:</label>
+          <input type="password" id="password" name="psw2" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
           <br>
           <br>
           <input type="submit">
