removed * from address 2 field as it's not a required field.

--- a/public/registration.html
+++ b/public/registration.html
@@ -68,7 +68,7 @@
           <label for="addy1">Address line 1:*</label>
           <input type="text" id="addy1" name="addy1" required><br>
 
-          <label for="addy2">Address line 2:*</label>
+          <label for="addy2">Address line 2:</label>
           <input type="text" id="addy2" name="addy2"><br>
 
           <label for="customerCity">City:*</label>
